ecep_assets/site.css
/* Organize via ITCSS */
/* SEE: https://tacc-main.atlassian.net/wiki/x/QQhv */




/* SETTINGS */

/* ECEP Branding */
:root {
  --ecep-purple: #4D008C;
  --ecep-green: #8FC01C;
  --ecep-accent-blue: #0177A9;
  --ecep-accent-red: #C5103D;
  --ecep-accent-gray: #888C8D;

  --ecep-font-title: 'Open Sans', 'Segoe UI', Tahoma, sans-serif;
  --ecep-font-content: Arial, sans-serif;
}

/* Translate ECEP Branding to Core-Styles */
:root {
  /* Color */
  /* https://github.com/TACC/Core-Styles/blob/v2.53.1/src/lib/_imports/settings/color--cms.auto.css */
  --global-color-primary--x-light: oklch( from var(--ecep-accent-gray) 96.875% c h );
  --global-color-primary--light: oklch( from var(--ecep-accent-gray) 75% c h );
  --global-color-primary--normal: var(--ecep-accent-gray );
  --global-color-primary--dark: oklch( from var(--ecep-accent-gray) 40% c h );
  --global-color-primary--x-dark: oklch( from var(--ecep-accent-gray) 33.3% c h );
  --global-color-primary--xx-dark: oklch( from var(--ecep-accent-gray) 25% c h );

  --global-color-accent--xxx-light: oklch( from var(--ecep-purple) 93.5% c h );
  --global-color-accent--xx-light: oklch( from var(--ecep-purple) 89.4% c h );
  --global-color-accent--x-light: oklch( from var(--ecep-purple) 82.8% c h );
  --global-color-accent--light: oklch( from var(--ecep-purple) 54.5% c h );
  --global-color-accent--normal: var(--ecep-purple);
  --global-color-accent--dark: oklch( from var(--ecep-purple) 20% c h );
  --global-color-accent--x-dark: oklch( from var(--ecep-purple) 0% c h );

  --global-color-accent--alt: oklch( from var(--ecep-purple) 82.8% c h );
  --global-color-accent--weak: oklch( from var(--ecep-purple) 40% c h );

  --global-color-secondary--normal: var(--ecep-green);
  --global-color-tertiary--normal: var(--ecep-green);

  /* Font */
  /* https://github.com/TACC/Core-Styles/blob/v2.53.1/src/lib/_imports/settings/font.css#L27 */
  --sans--cms: var(--ecep-font-content);

  /* HACK: Distinguish heading font via style instead of standard variable */
  /* FAQ: Because Core-Styles assumes the same font for headings */
  /* https://github.com/TACC/Core-Styles/blob/v2.53.1/src/lib/_imports/elements/headings--cms.css#L12 */
  & :is(h1, h2, h3, h4, h5, h6) {
    font-family: var(--ecep-font-title);
  }

  /* Header */
  /* https://github.com/TACC/Core-Styles/blob/v2.53.1/src/lib/_imports/core-styles.theme.default.css */
  --header-bkgd-color: var(--ecep-purple);
  --header-minor-border-color: var(--global-color-accent--xxx-light);
  --header-search-brdr-color: var(--global-color-accent--x-light);
  --header-search-bkgd-color: var(--global-color-accent--dark);
}




/* ELEMENTS */

h1 {
  text-transform: none;
}
h2 {
  color: inherit;
}
.o-section--style-muted h2,
.section--muted h2 {
  color: unset;
  opacity: 0.75;
}

figcaption {
  font-size: small;
}




/* COMPONENTS */

/* Blog */
/* https://github.com/TACC/Core-CMS/blob/v4.17.1/taccsite_cms/templates/djangocms_blog/includes/blog_meta.html#L11-L20 */
.blog-list article .byline,
article.post-detail .byline {
  display: none;
}




/* TRUMPS */

/* Header */

/* https://github.com/TACC/Core-Styles/blob/v2.51.0/src/lib/_imports/trumps/s-header.css#L156-L161 */
.s-header .nav-link:hover,
.s-header .nav-link:focus,
.s-header .nav-link:active,
.s-header .nav-item.active .nav-link {
  border-color: var(--ecep-accent-gray);
}

/* https://github.com/TACC/Core-Styles/blob/v2.38.0/src/lib/_imports/trumps/s-header.css#L24 */
.s-header {
  --height: 70px;
}

